[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/player/fall0.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/player/run2.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/run3.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/run0.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/run1.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/idle0.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/jump0.png" type="Texture" id=8]
[ext_resource path="res://sprites/player/shoot0.png" type="Texture" id=9]
[ext_resource path="res://sprites/player/shoot2.png" type="Texture" id=10]
[ext_resource path="res://sprites/player/shoot1.png" type="Texture" id=11]
[ext_resource path="res://sprites/player/dead0.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "dead",
"speed": 0.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": false,
"name": "shoot",
"speed": 15.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "jump",
"speed": 0.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "fall",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.93672, 11.0755 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "dead"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.538616, 5.00142 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 21, 8 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 1256
limit_bottom = 180
smoothing_enabled = true
editor_draw_limits = true

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
